# League-Stats

./: .flake8  .gitignore  404.html  =0.25.0  README.md  RELEASE_CHECKLIST.md  analyze.py  config.env.example  curl_and_save_to_files.py  download_from_google.sh  filtered_data.json  get_participant_data.py  index.html  league.py  league_match.json  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml  streamlit_app.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
.streamlit/: secrets.toml
2023/: graph_barons_heralds.py  graph_drakes.py  graph_kills.py  notes.txt
architecture/: index.html
changelog/: index.html
cli_cheatsheet/: index.html
cli_reference/: index.html
contributing/: index.html
docs/: architecture.md  changelog.md  cli_cheatsheet.md  cli_reference.md  contributing.md  environment.md  fetching_logic.md  glossary.md  index.md  metrics_definitions.md  overview.md  player_config.md  troubleshooting.md  visualizations_catalog.md
environment/: index.html
fetching_logic/: index.html
glossary/: index.html
league_stats_2023/: graph_kills.py
matches/: EUW1_6179302861.json  EUW1_6181938977.json  EUW1_6181991347.json  EUW1_6182041959.json  EUW1_6183206563.json  EUW1_6183241901.json  EUW1_6183269048.json  EUW1_6183305709.json  EUW1_6183704222.json  EUW1_6183767642.json  EUW1_6183811502.json  EUW1_6183843307.json  EUW1_6183897789.json  EUW1_6183933821.json  EUW1_6183970493.json  EUW1_6185251325.json  EUW1_6185318040.json  EUW1_6185388008.json  EUW1_6185488598.json  EUW1_6185572887.json
metrics_definitions/: index.html
overview/: index.html
player_config/: index.html
search/: search_index.json
stats_visualization/: __init__.py  analyze.py  async_fetch.py  gui_app.py  league.py  types.py  utils.py  viz_types.py
stats_visualization/visualizations/: farming_analysis.py  graph_barons_heralds.py  (+7 more)
tests/: __init__.py  conftest.py  test_aram_filtering.py  test_async_fetch.py  test_generate_visuals.py  test_graph_drakes.py  test_graph_kills.py  test_jungle_clear_analysis.py  test_lane_cs_diff.py  test_league.py  test_personal_performance.py  test_queue_filtering.py
troubleshooting/: index.html
visualizations_catalog/: index.html
